force-app/main/default/objects/LogicMelon_Job_Posting_Event__e/LogicMelon_Job_Posting_Event__e.object-meta.xml
<CustomObject>
    <description>Platform event for sending Job updates to LogicMelon Third party App.</description>
    <label>LogicMelon Job Posting Event</label>
    <pluralLabel>LogicMelon Job  Posting Events</pluralLabel>
</CustomObject>