force-app/main/default/objects/LogicMelon_Job_Posting_Event__e/fields/ClientBillRate__c.field-meta.xml
<CustomField>
    <fullName>ClientBillRate__c</fullName>
    <label>ClientBillRate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>