force-app/main/default/objects/LogicMelon_Job_Posting_Event__e/fields/EntityType__c.field-meta.xml
<CustomField>
    <fullName>EntityType__c</fullName>
    <label>EntityType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>