force-app/main/default/objects/LogicMelon_Job_Posting_Event__e/fields/JobDescription__c.field-meta.xml
<CustomField>
    <fullName>JobDescription__c</fullName>
    <label>JobDescription</label>
    <length>255</length>
    <type>Text</type>
</CustomField>