force-app/main/default/objects/LogicMelon_Job_Posting_Event__e/fields/JobName__c.field-meta.xml
<CustomField>
    <fullName>JobName__c</fullName>
    <label>JobName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>