force-app/main/default/objects/LogicMelon_Job_Posting_Event__e/fields/JobSubmissionCount__c.field-meta.xml
<CustomField>
    <fullName>JobSubmissionCount__c</fullName>
    <description>Count of JobSubmissions</description>
    <label>JobSubmissionCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>