force-app/main/default/objects/LogicMelon_Job_Posting_Event__e/fields/SendOutCount__c.field-meta.xml
<CustomField>
    <fullName>SendOutCount__c</fullName>
    <description>Count of total SendOuts</description>
    <label>SendOutCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>